# MT-C

./: .gitignore  .gitmodules  LICENSE  README.md
MD407-concurrency/: startup.c  toolchain.cmake
MD407-concurrency/libraries/utils/: printf.h
MD407-concurrency/src/: main.c
MD407-matrix/: .gitignore  CMakeLists.txt  toolchain.cmake
MD407-matrix/libraries/io/: io.c
MD407-matrix/libraries/startup/: startup.c  startup.h
MD407-matrix/libraries/utils/: ftos.c  usart.c  usart.h
MD407-matrix/scripts/: README.md  rtshow
MD407-matrix/src/: main.c  main.h
MD407-melody/: .gitignore  toolchain.cmake
MD407-melody/.cache/clangd/index/: FreeRTOS.h.A4F5F1B9695EF7A2.idx  FreeRTOSConfig.h.37F3CEF8FFD7B215.idx  core_cm4.h.17EF3FFBB2B0FFAC.idx  core_cm4_simd.h.AD415D79D1BC6FE2.idx  core_cmFunc.h.25F8D6DFA124573F.idx  core_cmInstr.h.3576DF9F11E4DE09.idx  croutine.h.A6D1E82AD8847A80.idx  deprecated_definitions.h.3363B9458E25158A.idx  event_groups.c.409F5F1B444F9DBA.idx  event_groups.h.5A79DDE6D9EED90A.idx  ftos.c.198987BDD470A33B.idx  ftos.h.1F2359CC2EB7A6D9.idx  list.c.86969A524B0377B4.idx  list.h.A9DC3A4F13B26795.idx  main.c.5ACF90E1FD9D462B.idx  main.h.86600F58057A7882.idx  misc.c.160D0232298C4DB3.idx  misc.h.53FD4E51E9B1A6D3.idx  mpu_wrappers.h.BDCCD6D5E03474C4.idx  port.c.55E09AB18BA7EAD2.idx  portable.h.358989607B6DFC89.idx  portmacro.h.3FAFB873D576ED54.idx  printf.c.8AB4CCD3ABC2682E.idx  printf.h.98C86B56938667C9.idx  projdefs.h.7D673FEEE6AE4F24.idx  queue.c.E23F6CEA2FFF20F8.idx  queue.h.0B497638D33B54F1.idx  semphr.h.4357367173C99CA6.idx  stack_macros.h.97E038D8C49671E6.idx  startup.c.EBEBDFD9D20EAD5C.idx  stm32f407xx.h.97498A34DC692F4F.idx  stm32f4xx.h.40F502411241E058.idx  stm32f4xx_can.c.02129C6069E021E3.idx  stm32f4xx_can.h.1AD8D02003734832.idx  stm32f4xx_dac.c.9B7C089A4E19DDA3.idx  stm32f4xx_dac.h.84C018DEA8A4EC2A.idx  stm32f4xx_exti.c.8C43A97A3C09678E.idx  (+25 more)
MD407-melody/Debug/: MD407-MATRIX.elf  MD407-MATRIX.map  MD407-MATRIX.s19
MD407-melody/libraries/io/: io.h
MD407-melody/libraries/utils/: ftos.h  timer.c  timer.h
MD407-melody/src/: main.c  main.h
MD407-reaction/: CMakeLists.txt  sci.c  sci.h  toolchain.cmake
MD407-reaction/cmake/: README.md
MD407-reaction/device/inc/: system_stm32f4xx.h
MD407-reaction/device/src/: system_stm32f4xx.c
MD407-reaction/include/: FreeRTOSConfig.h
MD407-reaction/libraries/utils/: ftos.c  ftos.h  printf.c  timer.c
MD407-reaction/src/: main.c  main.h
MD407-template/: CMakeLists.txt  README.md  dispatch.s  md407-ram.x  sci.c  startup.c  toolchain.cmake
MD407-template/Debug/: RTS-Lab.elf  RTS-Lab.map  RTS-Lab.s19
MD407-template/cmake/: CMakeLists.txt  toolchain.cmake
MD407-template/device/inc/: stm32f4xx.h  system_stm32f4xx.h
MD407-template/device/src/: system_stm32f4xx.c
MD407-template/include/: FreeRTOSConfig.h
MD407-template/scripts/: rtsend
MD407-template/src/: main.c
discovery-template/: .gitignore  Makefile  analyze.py  openocd.cfg  stack.py  start-gdb.sh
discovery-template/Include/: FreeRTOSConfig.h
discovery-template/device/ldscripts/: sections_flash.ld
discovery-template/extra/: stm32f0-openocd.cfg  stm32f051_template qemu.launch  stm32f051_template_openocd.launch
discovery-template/libraries/io/: io.c  io.h
discovery-template/libraries/utils/: idle.c  idle.h  printf.c  rng.c  rng.h  timer.c  timer.h  usart.c  usart.h
discovery-template/src/: concurrency.c  main.c  matrix.c  reaction.c
discovery-test/: Makefile  README.md  compile_commands.json  discovery-test.elf  discovery-test.hex  discovery-test.lst  discovery-test.map  start-gdb.sh  test.txt
discovery-test/Include/: FreeRTOSConfig.h
discovery-test/libraries/: Makefile
discovery-test/src/: .test  main.c
fft-script/: Cargo.toml  analogshort.csv
fft-script/src/: main.rs
rp2040/: .gitignore  CMakeLists.txt  README.md
rp2040-reaction/: CMakeLists.txt
rp2040-template/: .gitignore  CMakeLists.txt  README.md  cmake_install.cmake  deploy.sh
rp2040-template/App-Reaction/: CMakeLists.txt  main.c  main.h  trace_macro_definitions.h
rp2040-template/App-Template/: CMakeLists.txt  main.c
rp2040-template/Config/: FreeRTOSConfig.h
rp2040-template/pioasm/: cmake_install.cmake
rp2040/App-Concurrency/: CMakeLists.txt  main.c
rp2040/App-Matrix/: CMakeLists.txt  main.c  main.h  matrixgen.py
rp2040/App-Reaction/: CMakeLists.txt  main.c  main.h
rp2040/App-Template/: main.c
rp2040/Config/: FreeRTOSConfig.h
rp2040/pioasm/: CMakeCache.txt  pioasm
scripts/: bench_matrix_discovery.sh  bench_matrix_md407.sh  bench_matrix_pico.sh  matrix.txt
(+477 files in other folders)
